#100 closed bug (fixed)
AboutHaiku using garbage for version
Reported by: | johndrinkwater | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications | Version: | |
Keywords: | Cc: | diver | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Currently AboutHaiku shows "[]" characters in the version field.
Attachments (1)
Change History (14)
comment:1 by , 19 years ago
comment:2 by , 19 years ago
Cc: | added |
---|
comment:3 by , 19 years ago
Still valid as of rev16260, via Schmid's vmware 'factory'.
Having spoken to Steffano about it, it looks like non-beos compiled libraries are getting corrupted resources(?)
The only change has been the addition of (Revision X), so that it now shows "[][] (Revision 16260)[]"
comment:4 by , 19 years ago
Cc: | added |
---|
comment:7 by , 19 years ago
Owner: | changed from | to
---|
comment:8 by , 19 years ago
I recently had the same problem with an image I built. I tracked it down to that libbe.so was created with the node ID of a deleted node which had a BEOS:APP_VERSION attribute. Due to the way we emulate attributes under Linux libbe.so "inherited" the attributes of the former node. That's the reason why I recently tried to make use of extended attributes under Linux to remedy the problem, BTW. Anyway, I removed the attributes directory and all objects, did a full rebuild and the problem was gone.Now that I think of it, my former explanation doesn't make much sense, though. I had found that "setversion libbe.so -system ..." read the version_infos from the bad attribute and replaced only the system version_info (which is the correct behavior) leaving the bad app version_info finally used in AboutHaiku untouched (and writing them to both attribute and resources). What I apparently missed, is that before setversion, mimeset is invoked (not the other way around, as I apparently thought) and should already have transferred the correct app version_info from the resources to the attribute. So it actually shouldn't matter that the bad attribute existed beforehand.Mmh, not sure how to track that down, now that I can't reproduce it anymore. If anyone has clues...
comment:9 by , 19 years ago
Status: | new → assigned |
---|
comment:10 by , 19 years ago
Resolution: | → fixed |
---|
comment:11 by , 19 years ago
Apparently the combination of rc's writing only the app version_info, BAppFileInfo::GetVersionInfo() failing when reading not both infos, and the problem with the attribute emulation under Linux caused the problem.
Fixed in 16320.
comment:12 by , 19 years ago
Status: | assigned → closed |
---|
comment:13 by , 19 years ago
bug_group: | → developers |
---|
Could you check if it is fixed or still valid ?